--- a/config.json
+++ b/config.json
@@ -2,9 +2,9 @@
     "host": "0.0.0.0",
     "port": 3000,
     "logpath": "logger.php",
-    "foodMass": 1,
+    "foodMass": 50,
     "fireFood": 20,
-    "limitSplit": 16,
+    "limitSplit": 999,
     "defaultPlayerMass": 10,
 	"virus": {
     "fill": "#33ff33",
@@ -16,9 +16,9 @@
         },
 		"splitMass": 180
 	},
-    "gameWidth": 5000,
-    "gameHeight": 5000,
-    "adminPass": "DEFAULT",
+    "gameWidth": 20000,
+    "gameHeight": 20000,
+    "adminPass": "somepass",
     "gameMass": 20000,
     "maxFood": 1000,
     "maxVirus": 50,
@@ -31,7 +31,7 @@
     "newPlayerInitialPosition": "farthest",
     "massLossRate": 1,
     "minMassLoss": 50,
-    "mergeTimer": 15,
+    "mergeTimer": 0,
     "sqlinfo":{
       "connectionLimit": 100,
       "host": "DEFAULT",
